[package]
name = "ohlcv-tools"
version = "0.1.0"
edition = "2024"
description = "Small CLI toolkit for OHLCV/tick market data: VWAP, moving averages, candle aggregation."
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
csv = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
proptest = "1"
criterion = "0.5"

[[bench]]
name = "aggregate_bench"
harness = false

[[bench]]
name = "vwap_bench"
harness = false

[[bench]]
name = "sma_bench"
harness = false

[[bench]]
name = "resample_bench"
harness = false
